kube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smime-relay
  annotations:
    wave.pusher.com/update-on-config-change: "true"
  labels:
    app: smime
    part: relay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smime
      part: relay
  template:
    metadata:
      annotations:
         cni.projectcalico.org/ipv6pools: "[\"smime-ip6-ippool\"]"
      labels:
        app: smime
        part: relay
    spec:
      volumes:
        - name: conf
          configMap:
            name: smime-relay-conf
        - name: certs
          persistentVolumeClaim:
            claimName: smime-certs
        - name: tls-key
          secret:
            secretName: smime-relay-tls
      containers:
        - name: relay
          image: as207960/smime:5
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: "/p12"
              name: certs
            - mountPath: "/tls"
              name: tls-key
            - mountPath: "/settings.toml"
              name: conf
              subPath: "settings.toml"
          ports:
            - containerPort: 25
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: smime-relay
spec:
  podSelector:
    matchLabels:
      app: smime
      part: relay
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 25
---
apiVersion: v1
kind: Service
metadata:
  name: smime-relay
  labels:
    app: smime
    part: relay
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: smime
    part: relay
  ports:
    - port: 25
      targetPort: 25
      protocol: TCP
      name: smtp
